# poc-smbin.rs

./: Cargo.toml  rust-toolchain.toml
.devcontainer/: devcontainer.json
src/: cli.rs  logger.rs  main.rs
